<resources>
    <string name="app_name">PostRocker</string>
    <string name="cabinet"> Кабинет </string>
    <string name="contests"> Контесты </string>
    <string name="find"> Поиск </string>
    <string name="not_found"> Не найдено </string>
    <string name="programming"> Программирование </string>
    <string name="rating"> Рейтинг </string>
    <string name="faq"> F.A.Q </string>
    <string name="time_limit"> Ограничение по времени: %1$d c. </string>
    <string name="memory_limit"> Ограничение по памяти: %1$d МБ. </string>
    <string name="task"> Задачи </string>
    <string name="input"> Ввод </string>
    <string name="output"> Вывод </string>
    <string name="send"> Отослать </string>
    <string name="username"> Имя пользователя </string>
    <string name="password"> Пароль </string>
    <string name="login"> Войти </string>
    <string name="login_first"> Ваша сессия закончена, залогиньтесь </string>

    <string name="title_tasks"> Tasks </string>
    <string name="title_contests"> Contests </string>
    <string name="title_rating"> Rating </string>
    <string name="title_faq"> F.A.Q </string>
    <string name="logout"> Выйти </string>
    <string name="logged_out"> Вы вышли из кабинета </string>
    <string name="signed_in"> Вы успешно авторизовались </string>
    <string name="signed_up"> Вы успешно зарегистрировались </string>
    <string name="last_login"> Последнее посещение: %1$s </string>
    <string name="date_joined"> Зарегистрирован: %1$s </string>
    <string name="no_account"> Нет аккаунта? </string>
    <string name="registration"> Регистрация </string>
    <string name="register"> Зарегистрироваться </string>
    <string name="email"> Почта </string>
</resources>
