<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tasks.single_task.SingleTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/small_margin">

        <RelativeLayout
            android:id="@+id/buttons_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="15dp"
                android:layout_height="12dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_arrow_back"
                android:backgroundTint="@color/black"
                android:textColor="@color/dark_blue" />

            <Button
                android:id="@+id/task_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/btn_back"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/black"
                android:text="@string/send"
                android:textColor="@color/dark_blue" />

        </RelativeLayout>

        <TextView
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/task_time_limit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/small_margin"
                android:text="@string/time_limit"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/h2" />

            <TextView
                android:id="@+id/task_memory_limit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/small_margin"
                android:text="@string/memory_limit"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/h2" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_margin="@dimen/small_margin"
            android:contentDescription="@string/app_name"
            android:src="@color/medium_gray" />

        <TextView
            android:id="@+id/task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/h1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_margin="@dimen/small_margin"
            android:contentDescription="@string/app_name"
            android:src="@color/medium_gray" />

        <LinearLayout
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/input"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/output"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/h2" />

        </LinearLayout>

        <TableLayout
            android:id="@+id/task_io_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:stretchColumns="*">

        </TableLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>

