<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentification.LoginActivity"
    android:padding="@dimen/medium_margin"
    android:theme="@style/Theme.PostRocker.NoActionBar">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_arrow_back"
        android:backgroundTint="@color/black"
        android:textColor="@color/dark_blue" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/new_rocker"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/appbar_padding"
        android:textColor="@color/black"
        android:text="@string/login"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@id/password"
        android:inputType="text"
        android:autofillHints="username"
        android:textSize="@dimen/h2"
        android:hint="@string/username"
        android:background="@drawable/border"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/large_margin"
        app:layout_constraintBottom_toTopOf="@id/login"
        android:inputType="textPassword"
        android:autofillHints="username"
        android:background="@drawable/border"
        android:textSize="@dimen/h2"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:background="@drawable/btn_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        android:textSize="@dimen/h2" />

</androidx.constraintlayout.widget.ConstraintLayout>
